Made the select list font 1rem to prevent auto zoom on the iPhone due to the font size being too small.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -648,6 +648,7 @@
     background: #fff;
     pointer-events: none;
     transition: all 0.2s ease-in-out;
+    font-size: 1rem;
   }
 
   input[type="text"],
@@ -823,10 +824,6 @@
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.14),
       0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 4px 7px 5px rgba(0, 0, 0, 0.1);
   }
-
-  // &:hover .plan-title {
-  //   text-decoration: underline;
-  // }
 
   &-title {
     font-size: 1.5rem;
@@ -1250,6 +1247,7 @@
 .select-list {
   cursor: pointer;
   border: none;
+  font-size: 1rem;
   border-radius: 0.4rem;
   background: #fff;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
